[gd_scene load_steps=2 format=3 uid="uid://djaroc0g74cbg"]

[ext_resource type="Script" path="res://Scripts/LayerTab.gd" id="1_wmhhp"]

[node name="LayerTab" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 40.0
theme_override_constants/separation = 2
script = ExtResource( "1_wmhhp" )
metadata/_edit_use_custom_anchors = false

[node name="Panel" type="Panel" parent="."]
minimum_size = Vector2(0, 40)
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_custom_anchors = false
metadata/_edit_layout_mode = 1

[node name="H" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExpandContainer" type="Control" parent="Panel/H"]
minimum_size = Vector2(20, 0)
offset_right = 20.0
offset_bottom = 40.0

[node name="ExpandButton" type="Button" parent="Panel/H/ExpandContainer"]
layout_direction = 1
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-
"

[node name="Button" type="Button" parent="Panel/H"]
offset_left = 24.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "TEST TEXT"
metadata/_edit_use_custom_anchors = true

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
offset_top = 42.0
offset_right = 200.0
offset_bottom = 42.0
theme_override_constants/margin_left = 20

[node name="V" type="VBoxContainer" parent="MarginContainer"]
offset_left = 20.0
offset_right = 200.0
theme_override_constants/separation = 2

[connection signal="pressed" from="Panel/H/ExpandContainer/ExpandButton" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="Panel/H/Button" to="." method="_on_button_pressed"]
